# image_caption

./: .gitignore  Makefile  PHASE1.md  PHASE2.md  PHASE3.md  PROJECT_OVERVIEW.md  README.md  docker-compose.yaml  folder_structure.txt  models.dvc  pyproject.toml  requirements.txt  requirements2.txt  requirements_dev.txt
.dvc/: config
.github/workflows/: cml.yaml  docker.yaml  tests.yaml
config/: config.yaml
config/conf/: config.yaml
config/conf/experiment/: demo.yaml  exp1.yaml
dockerfiles/: inference.dockerfile  main.dockerfile  predict_model.dockerfile  train_model.dockerfile
docs/: README.md  info.md  info.txt  mkdocs.yaml  run_experiments.md
docs/source/: index.md
image_caption/: .pre-commit-config.yaml  __init__.py  app.py  config.py  gradio_app.py  inference.py  main.py  predict_model.py  pytorch_profiler.py  run_config.py
image_caption/data/: data_preprocessing.py  exploring_dataset.py
image_caption/models/: model.py  model_test.py  training_model.py
image_caption/outputs/2025-05-08/18-09-31/.hydra/: config.yaml  hydra.yaml
image_caption/visualizations/: model_visualization.py
mlruns/0/: meta.yaml
mlruns/138017767960933004/: meta.yaml
mlruns/138017767960933004/3eb1d254db384512b8d6502f687f688b/: meta.yaml
mlruns/138017767960933004/3eb1d254db384512b8d6502f687f688b/artifacts/: features.pkl  tokenizer.pkl
mlruns/138017767960933004/3eb1d254db384512b8d6502f687f688b/params/: model_type
mlruns/138017767960933004/3eb1d254db384512b8d6502f687f688b/tags/: mlflow.runName  mlflow.source.name
notebooks/: imageCaption.ipynb
tests/: __init__.py  test_data.py  test_inference.py  test_model.py  test_training.py
