[build-system]
requires = ["setuptools>=61.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image_caption"
version = "0.0.1"
description = "Auto-generation of captions from an image."
authors = [
  { name = "team2", email = "your@email.com" }
]

readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["image_caption"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements_dev.txt"] }

[tool.ruff]
line-length = 120

# Optional: enable some extra rules
select = ["E", "F", "I", "W"]
# E = pycodestyle errors
# F = pyflakes
# I = isort
# W = warnings

# Optional: autofix
# Use `ruff check . --fix` to apply

[tool.mypy]
ignore_missing_imports = true